@@ -9,6 +9,7 @@
 modules 3.3.0
 	* I18nized the various messages.
 	* Removed the module-trace command
+	* Simplified the module syslogging interaction
 
 ****************************   Release 3.2 ******************************
 Modules 3.2.7
